--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,23 +1,29 @@
 .cover {
-  padding: 92px 48px 0;
-  margin: 0;
+  background-image: url(../../images/cover-trains.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1184px;
+  width: 100%;
+  margin: 92px auto 0;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
-    padding: 92px 0 0 0;
+    margin-top: 92px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    padding-top: 90px;
+    margin-top: 90px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .cover {
-    padding-top: 66px;
+    margin-top: 66px;
+    background-image: url(../../images/cover-trains-S.jpg);
   }
 }
