--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,16 +1,15 @@
 .footer__copyright {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   text-align: right;
   color: #FFFFFF;
+  margin: 0;
 }
 
 @media screen and (max-width: 710px) {
   .footer__copyright {
-    font-size: 14px;
     line-height: 1;
     margin-top: 48px;
   }
