--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,14 @@
 .footer {
-  margin: 0;
+  margin: 0 auto;
   min-height: 18px;
   height: 100%;
+  max-width: 1280px;
+  width: 100%;
   padding: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
