--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,4 @@
 .header {
-  font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   padding: 28px 48px 0;
@@ -8,6 +7,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
