--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,16 +1,18 @@
 .intro__list {
   list-style-type: none;
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.5;
-  margin: 33px 0 0 0;
+  margin: 33px 0 0;
   padding: 0;
+  max-width: 690px;
+  color: #FFFFFF;
+  text-align: left;
 }
 
 @media screen and (max-width: 425px) {
   .intro__list {
-    margin: 34px 0 0 0;
+    margin: 34px 0 0;
   }
 }
