--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,16 @@
 .intro__text {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.63;
-  margin: 40px 0 0 0;
+  margin: 40px 0 0;
+  max-width: 690px;
+  color: #FFFFFF;
+  text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .intro__text {
+    width: 100%; 
+  }
 }
