--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,10 +1,18 @@
 .intro__title {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 1.07;
   margin: 0;
+  max-width: 690px;
+  color: #FFFFFF;
+  text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    width: 100%; 
+  }
 }
 
 @media screen and (max-width: 425px) { 
