--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,11 +3,16 @@
   padding: 92px 48px 0;
   box-sizing: border-box;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1080px;
 }
 
 @media screen and (max-width: 768px) {
   .intro {
     padding: 88px 24px 0;
+    max-width: 768px;
   }
 }
 
