--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,4 @@
 .lead__subtitle {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -16,6 +15,6 @@
     max-width: 288px;
     font-size: 16px;
     line-height: 1.25;
-    margin: 16px auto 0;
+    margin-top: 16px;
   }
 }
