--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   padding: 56px 48px 0;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1280px;
   box-sizing: border-box;
 }
 
@@ -15,12 +16,14 @@
 
 @media screen and (max-width: 768px) {
   .lead {
-    padding: 48px 24px 0;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead {
-    padding: 48px 16px 0;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
