--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,7 +4,10 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
+  width: 100%;
+  max-width: 1280px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
