--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -7,8 +7,14 @@
   margin: 33px 0 0;
   padding: 0;
   max-width: 690px;
+  width: 100%;
   color: #FFFFFF;
   text-align: left;
+}
+@media screen and (max-width: 768px) {
+  .intro__list {
+  max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 425px) {
