--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,12 +5,13 @@
   line-height: 1.63;
   margin: 40px 0 0;
   max-width: 690px;
+  width: 100%;
   color: #FFFFFF;
   text-align: left;
 }
 
 @media screen and (max-width: 768px) {
   .intro__text {
-    width: 100%; 
+    max-width: 720px
   }
 }
