--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,13 +5,14 @@
   line-height: 1.07;
   margin: 0;
   max-width: 690px;
+  width: 100%;
   color: #FFFFFF;
   text-align: left;
 }
 
 @media screen and (max-width: 768px) {
   .intro__title {
-    width: 100%; 
+    max-width: 720px; 
   }
 }
 
