Исправление пути к картинке

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -29,6 +29,6 @@
 
 @media screen and (max-width: 425px) {
   .cover__link {
-    background-image: url(../../images/cover-trains-S.jpg);
+    background-image: url(../../../images/cover-trains-S.jpg);
   }
 }
